--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta property="og:locale" content="pt_BR">
 		<meta property="og:title" content="Bolsonaro falou algo estúpido hoje?">
 		<meta property="og:site_name" content="Bolsonaro falou algo estúpido hoje?">
-		<meta property="og:url" content="http://127.0.0.1/initializr/">
+		<meta property="og:url" content="http://faoliveira.github.io/bolsominion/">
 		<meta property="og:description" content="Cansado de se atualizar sobre se o Bolsonaro falou ou fez algo estúpido hoje?"">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="images/bolsominion.png" />
@@ -93,7 +93,7 @@
 						</div>
 
                     <div class="credit">Feito com amor ❤ por <a href="http://twitter.com/faoliveira" target="_blank">@faoliveira</a></div>
-					<div class="credit">Disponível no <a href="http://twitter.com/faoliveira" target="_blank">Github</a>. Colabore</div>
+					<div class="credit">Disponível no <a href="https://github.com/faoliveira/bolsominion" target="_blank">Github</a>. Colabore</div>
 
 					</div>
 				</div>
