--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="navbar text-center">
                 <div class="container">
 					<h1>Bolsonaro falou algo estúpido hoje?</h1>
-					<img src="images/bolsominion.png" width="500" height="666" />
+					<img src="images/bolsominion.png" width="500" height="666" class="img-responsive" />
                 </div>
                 <!-- end container -->
             </div>
