--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<meta property="og:url" content="http://faoliveira.github.io/bolsominion/">
 		<meta property="og:description" content="Cansado de se atualizar sobre se o Bolsonaro falou ou fez algo estúpido hoje?"">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="images/bolsominion.png" />
+		<meta property="og:image" content="http://faoliveira.github.io/bolsominion/images/chorume.jpg" />
 
         <!--[if lt IE 9]>
             <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
