--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="pt-BR""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="pt-BR""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="pt-BR""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="pt-BR"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="pt""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="pt""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="pt""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="pt"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
 		<meta name="author" content="Felipe Oliveira">
@@ -23,11 +23,7 @@
 		<meta property="og:url" content="http://faoliveira.github.io/bolsominion/">
 		<meta property="og:description" content="Cansado de se atualizar sobre se o Bolsonaro falou ou fez algo estúpido hoje?"">
 		<meta property="og:type" content="website">
-<<<<<<< HEAD
 		<meta property="og:image" content="http://faoliveira.github.io/bolsominion/images/chorume.jpg" />
-=======
-		<meta property="og:image" content="http://faoliveira.github.io/bolsominion/images/bolsominion.png" />
->>>>>>> origin/gh-pages
 
         <!--[if lt IE 9]>
             <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
