--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
 					
 					    <div class="contact_icons">
                         <ul class="contact_socials clearfix animated" data-animation="fadeIn" data-animation-delay="600">
-                            <li><a href="http://www.facebook.com/sharer/sharer.php?u=http%3A//127.0.0.1/initializr/&t=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="fa icon-facebook"></i></a></li>
-                            <li><a href="http://www.twitter.com/intent/tweet?url=http%3A//127.0.0.1/initializr/&text=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="fa icon-twitter"></i></a></li>
+                            <li><a href="http://www.facebook.com/sharer/sharer.php?u=http%3A//faoliveira.github.io/bolsominion/&t=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="fa icon-facebook"></i></a></li>
+                            <li><a href="http://www.twitter.com/intent/tweet?url=http%3A//faoliveira.github.io/bolsominion/&text=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="fa icon-twitter"></i></a></li>
                         </ul>
 						</div>
+						
 
                     <div class="credit">Feito com amor ❤ por <a href="http://twitter.com/faoliveira" target="_blank">@faoliveira</a></div>
 					<div class="credit">Disponível no <a href="https://github.com/faoliveira/bolsominion" target="_blank">Github</a>. Colabore</div>
