tempo de contagem automatizado
http://trulycode.com/bytes/count-date-time-javascript/

--- a/index.html
+++ b/index.html
@@ -51,11 +51,26 @@
 				<div class="row">
 					<div class="col-sm-12 text-center">
 						<div id="tempo">
-							<div class="dash days_dash">
-								<div class="digit">0</div>
-								<div class="digit">5</div>
-								<span class="dash_title">Dias</span>
-							</div>
+							
+                                    <div class="dash days_dash">
+                                        <div id="days" class="digit day_field">00</div>
+                                        <span class="dash_title">Dias</span>
+                                    </div>
+
+                                    <div class="dash hours_dash">
+                                        <div id="hours" class="digit">00</div>
+                                        <span class="dash_title">Horas</span>
+                                    </div>
+                       
+                                    <div class="dash minutes_dash">
+                                        <div id="minutes" class="digit">00</div>
+                                        <span class="dash_title">Minutos</span>
+                                    </div>
+
+                                    <div class="dash seconds_dash">
+                                        <div id="seconds" class="digit">00</div>
+                                        <span class="dash_title">Segundos</span>
+                                    </div>
 						</div>
 					</div>
 				</div>
