--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 			</br>
 			<div class="row">
 				<div class="col-sm-12 text-center">
-					<h3>Nosso recorde é de 05 dias</h3> 
-					<p>Colabore para melhorar este índice</p>
+					<!--<h3>Nosso recorde é de 05 dias</h3> -->
+					<p>Colabore para melhorar este índice.</p>
 				</div>
 			</div>
 					
