--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>Bolsonaro falou algo estúpido hoje?</title>
         <meta name="description" content="Cansado de se atualizar sobre se o Bolsonaro falou ou fez algo estúpido hoje?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="msvalidate.01" content="4905B0479AEF9FFFFAB536283BC5238E" />
 		
         <link rel="stylesheet" href="assets/css/style.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,800italic,800,700italic,700,600italic,600,400italic,300' rel='stylesheet' type='text/css' />
