--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<meta property="og:locale" content="pt_BR">
 		<meta property="og:title" content="Bolsonaro falou algo estúpido hoje?">
 		<meta property="og:site_name" content="Bolsonaro falou algo estúpido hoje?">
-		<meta property="og:url" content="http://faoliveira.github.io/bolsominion/">
-		<meta property="og:description" content="Cansado de se atualizar sobre se o Bolsonaro falou ou fez algo estúpido hoje?"">
+		<meta property="og:url" content="http://bolsominion.top/">
+		<meta property="og:description" content="Cansado de dse atualizar sobre se o Bolsonaro falou ou fez algo estúpido hoje?"">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="http://faoliveira.github.io/bolsominion/images/chorume.jpg" />
+		<meta property="og:image" content="http://bolsominion.top/images/chorume.jpg" />
 
         <!--[if lt IE 9]>
             <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
