--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 					
 					    <div class="contact_icons">
                         <ul class="contact_socials clearfix animated" data-animation="fadeIn" data-animation-delay="600">
-                            <li><a href="http://www.facebook.com/sharer/sharer.php?u=http%3A//faoliveira.github.io/bolsominion/&t=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="icon-2x icon-facebook"></i></a></li>
-                            <li><a href="http://www.twitter.com/intent/tweet?url=http%3A//faoliveira.github.io/bolsominion/&text=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="icon-2x icon-twitter"></i></a></li>
+                            <li><a href="http://www.facebook.com/sharer/sharer.php?u=http%3A//bolsominion.top/&t=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="icon-2x icon-facebook"></i></a></li>
+                            <li><a href="http://www.twitter.com/intent/tweet?url=http%3A//bolsominion.top/&text=Bolsonaro falou algo est&uacute;pido hoje?" target="_blank" class="share"><i class="icon-2x icon-twitter"></i></a></li>
                         </ul>
 						</div>
 						
